--- a/app/src/main/res/layout/activity_akun.xml
+++ b/app/src/main/res/layout/activity_akun.xml
@@ -30,20 +30,21 @@
         app:layout_constraintEnd_toEndOf="@+id/view_akun"
         app:layout_constraintStart_toStartOf="@+id/view_akun"
         app:layout_constraintTop_toTopOf="@+id/view_akun"
-        app:layout_constraintVertical_bias="0.260
+        app:layout_constraintVertical_bias="0.280
 " />
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textinput_namauser"
-        style="@style/Widget.Design.TextInputLayout"
-        android:layout_width="370dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/view_akun"
         app:layout_constraintEnd_toEndOf="@+id/view_akun"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/view_akun"
         app:layout_constraintTop_toTopOf="@+id/view_akun"
-        app:layout_constraintVertical_bias="0.373">
+        app:layout_constraintVertical_bias="0.403">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -55,15 +56,15 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textinput_password"
-        style="@style/Widget.Design.TextInputLayout"
-        android:layout_width="370dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/view_akun"
         app:layout_constraintEnd_toEndOf="@+id/view_akun"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/view_akun"
         app:layout_constraintTop_toTopOf="@+id/view_akun"
-        app:layout_constraintVertical_bias="0.469">
+        app:layout_constraintVertical_bias="0.499">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -74,8 +75,8 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
-        android:layout_width="370dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:hint="Lokasi"
         app:layout_constraintBottom_toBottomOf="@+id/view_akun"
@@ -83,7 +84,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/view_akun"
         app:layout_constraintTop_toTopOf="@+id/view_akun"
-        app:layout_constraintVertical_bias="0.565">
+        app:layout_constraintVertical_bias="0.595">
 
         <AutoCompleteTextView
             android:id="@+id/auto_lokasi"
@@ -94,15 +95,15 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
-        android:layout_width="370dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@+id/view_akun"
         app:layout_constraintEnd_toEndOf="@+id/view_akun"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/view_akun"
         app:layout_constraintTop_toTopOf="@+id/view_akun"
-        app:layout_constraintVertical_bias="0.666">
+        app:layout_constraintVertical_bias="0.696">
 
         <AutoCompleteTextView
             android:id="@+id/auto_golongan"
@@ -117,13 +118,16 @@
         android:id="@+id/btn_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/blue"
         android:text="Update Profile"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view_akun"
         app:layout_constraintEnd_toEndOf="@+id/view_akun"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.518"
         app:layout_constraintStart_toStartOf="@+id/view_akun"
         app:layout_constraintTop_toTopOf="@+id/view_akun"
-        app:layout_constraintVertical_bias="0.808" />
+        app:layout_constraintVertical_bias="0.855" />
 
     <TextView
         android:id="@+id/textview_username"
@@ -135,18 +139,29 @@
         app:layout_constraintEnd_toEndOf="@+id/view_akun"
         app:layout_constraintStart_toStartOf="@+id/view_akun"
         app:layout_constraintTop_toTopOf="@+id/view_akun"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintVertical_bias="0.330" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/btn_back"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/view_akun"
         app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="@+id/view_akun"
         app:layout_constraintTop_toTopOf="@+id/view_akun"
-        app:layout_constraintVertical_bias="0.03"
-        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
+        app:layout_constraintVertical_bias="0.03" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:layout_constraintBottom_toBottomOf="@+id/view_akun"
+        app:layout_constraintEnd_toEndOf="@+id/view_akun"
+        app:layout_constraintStart_toStartOf="@+id/view_akun"
+        app:layout_constraintTop_toTopOf="@+id/view_akun"
+        app:layout_constraintVertical_bias="0.130"
+        app:srcCompat="@drawable/ic_account" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
