--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/navbar"
-        app:itemBackground="@color/design_default_color_primary"
+        app:itemBackground="@color/blue"
         app:itemTextColor="@drawable/selector"
         app:itemIconTint="@drawable/selector"
         app:menu="@menu/navigation_bottom"
@@ -21,7 +21,7 @@
         android:id="@+id/view_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/home_bg"
+        android:background="@drawable/bg_home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -31,31 +31,33 @@
 
     <TextView
         android:id="@+id/textview_orang"
-        android:layout_width="50dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="IN"
-        android:textSize="16sp"
+        android:textColor="@color/white"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view_home"
         app:layout_constraintEnd_toEndOf="@+id/view_home"
-        app:layout_constraintHorizontal_bias="0.62"
+        app:layout_constraintHorizontal_bias="0.569"
         app:layout_constraintStart_toStartOf="@+id/view_home"
         app:layout_constraintTop_toTopOf="@+id/view_home"
-        app:layout_constraintVertical_bias="0.435" />
+        app:layout_constraintVertical_bias="0.446" />
 
     <TextView
         android:id="@+id/textview_nama5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="User"
+        android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view_home"
         app:layout_constraintEnd_toEndOf="@+id/view_home"
-        app:layout_constraintHorizontal_bias="0.458"
+        app:layout_constraintHorizontal_bias="0.410"
         app:layout_constraintStart_toStartOf="@+id/view_home"
         app:layout_constraintTop_toTopOf="@+id/view_home"
-        app:layout_constraintVertical_bias="0.435" />
+        app:layout_constraintVertical_bias="0.445" />
 
     <TextView
         android:id="@+id/textview_nama1"
@@ -71,32 +73,19 @@
         app:layout_constraintTop_toTopOf="@+id/view_home"
         app:layout_constraintVertical_bias="0.531" />
 
-    <TextView
-        android:id="@+id/textview_username"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:text="Halo"
-        android:textSize="16sp"
-        android:textStyle="italic"
-        app:layout_constraintBottom_toBottomOf="@+id/view_home"
-        app:layout_constraintEnd_toEndOf="@+id/view_home"
-        app:layout_constraintHorizontal_bias="0.75"
-        app:layout_constraintStart_toStartOf="@+id/view_home"
-        app:layout_constraintTop_toTopOf="@+id/view_home"
-        app:layout_constraintVertical_bias="0.185" />
-
     <Switch
         android:id="@+id/switch4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minWidth="48dp"
         android:minHeight="48dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/view_home"
         app:layout_constraintEnd_toEndOf="@+id/view_home"
         app:layout_constraintHorizontal_bias="0.857"
         app:layout_constraintStart_toStartOf="@+id/view_home"
         app:layout_constraintTop_toTopOf="@+id/view_home"
-        app:layout_constraintVertical_bias="0.832" />
+        app:layout_constraintVertical_bias="0.805" />
 
     <Switch
         android:id="@+id/switch3"
@@ -104,12 +93,13 @@
         android:layout_height="wrap_content"
         android:minWidth="48dp"
         android:minHeight="48dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/view_home"
         app:layout_constraintEnd_toEndOf="@+id/view_home"
         app:layout_constraintHorizontal_bias="0.857"
         app:layout_constraintStart_toStartOf="@+id/view_home"
         app:layout_constraintTop_toTopOf="@+id/view_home"
-        app:layout_constraintVertical_bias="0.732" />
+        app:layout_constraintVertical_bias="0.718" />
 
     <Switch
         android:id="@+id/switch2"
@@ -117,12 +107,13 @@
         android:layout_height="wrap_content"
         android:minWidth="48dp"
         android:minHeight="48dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@+id/view_home"
         app:layout_constraintEnd_toEndOf="@+id/view_home"
         app:layout_constraintHorizontal_bias="0.857"
         app:layout_constraintStart_toStartOf="@+id/view_home"
         app:layout_constraintTop_toTopOf="@+id/view_home"
-        app:layout_constraintVertical_bias="0.63" />
+        app:layout_constraintVertical_bias="0.625" />
 
     <Switch
         android:id="@+id/switch1"
@@ -142,40 +133,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
+        android:textColor="@color/blue"
         android:textSize="60sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view_home"
         app:layout_constraintEnd_toEndOf="@+id/view_home"
         app:layout_constraintStart_toStartOf="@+id/view_home"
         app:layout_constraintTop_toTopOf="@+id/view_home"
-        app:layout_constraintVertical_bias="0.288" />
+        app:layout_constraintVertical_bias="0.307" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Watt"
-        android:textSize="24sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view_home"
         app:layout_constraintEnd_toEndOf="@+id/view_home"
         app:layout_constraintStart_toStartOf="@+id/view_home"
         app:layout_constraintTop_toTopOf="@+id/view_home"
-        app:layout_constraintVertical_bias="0.376" />
-
-    <TextView
-        android:id="@+id/textview_daya4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/view_home"
-        app:layout_constraintEnd_toEndOf="@+id/view_home"
-        app:layout_constraintHorizontal_bias="0.574"
-        app:layout_constraintStart_toStartOf="@+id/view_home"
-        app:layout_constraintTop_toTopOf="@+id/view_home"
-        app:layout_constraintVertical_bias="0.826" />
+        app:layout_constraintVertical_bias="0.374" />
 
     <TextView
         android:id="@+id/textview_nama4"
@@ -189,21 +167,7 @@
         app:layout_constraintHorizontal_bias="0.144"
         app:layout_constraintStart_toStartOf="@+id/view_home"
         app:layout_constraintTop_toTopOf="@+id/view_home"
-        app:layout_constraintVertical_bias="0.825" />
-
-    <TextView
-        android:id="@+id/textview_daya3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/view_home"
-        app:layout_constraintEnd_toEndOf="@+id/view_home"
-        app:layout_constraintHorizontal_bias="0.574"
-        app:layout_constraintStart_toStartOf="@+id/view_home"
-        app:layout_constraintTop_toTopOf="@+id/view_home"
-        app:layout_constraintVertical_bias="0.727" />
+        app:layout_constraintVertical_bias="0.795" />
 
     <TextView
         android:id="@+id/textview_nama3"
@@ -217,7 +181,7 @@
         app:layout_constraintHorizontal_bias="0.144"
         app:layout_constraintStart_toStartOf="@+id/view_home"
         app:layout_constraintTop_toTopOf="@+id/view_home"
-        app:layout_constraintVertical_bias="0.727" />
+        app:layout_constraintVertical_bias="0.708" />
 
     <TextView
         android:id="@+id/textview_nama2"
@@ -231,49 +195,113 @@
         app:layout_constraintHorizontal_bias="0.144"
         app:layout_constraintStart_toStartOf="@+id/view_home"
         app:layout_constraintTop_toTopOf="@+id/view_home"
-        app:layout_constraintVertical_bias="0.626" />
-
-    <TextView
-        android:id="@+id/textview_daya2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/view_home"
-        app:layout_constraintEnd_toEndOf="@+id/view_home"
-        app:layout_constraintHorizontal_bias="0.574"
-        app:layout_constraintStart_toStartOf="@+id/view_home"
-        app:layout_constraintTop_toTopOf="@+id/view_home"
-        app:layout_constraintVertical_bias="0.626" />
+        app:layout_constraintVertical_bias="0.620" />
 
     <TextView
         android:id="@+id/textview_daya1"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="500 Watt"
+        android:textAlignment="textEnd"
         android:textSize="16sp"
+        android:textColor="@color/blue"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/view_home"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/view_home"
-        app:layout_constraintHorizontal_bias="0.574"
+        app:layout_constraintHorizontal_bias="0.620"
         app:layout_constraintStart_toStartOf="@+id/view_home"
         app:layout_constraintTop_toTopOf="@+id/view_home"
         app:layout_constraintVertical_bias="0.531" />
+
+    <TextView
+        android:id="@+id/textview_daya2"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="500 Watt"
+        android:textAlignment="textEnd"
+        android:textSize="16sp"
+        android:textColor="@color/blue"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/view_home"
+        app:layout_constraintHorizontal_bias="0.620"
+        app:layout_constraintStart_toStartOf="@+id/view_home"
+        app:layout_constraintTop_toTopOf="@+id/view_home"
+        app:layout_constraintVertical_bias="0.62" />
+
+    <TextView
+        android:id="@+id/textview_daya3"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="500 Watt"
+        android:textAlignment="textEnd"
+        android:textSize="16sp"
+        android:textColor="@color/blue"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/view_home"
+        app:layout_constraintHorizontal_bias="0.620"
+        app:layout_constraintStart_toStartOf="@+id/view_home"
+        app:layout_constraintTop_toTopOf="@+id/view_home"
+        app:layout_constraintVertical_bias="0.709" />
+
+    <TextView
+        android:id="@+id/textview_daya4"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="500 Watt"
+        android:textAlignment="textEnd"
+        android:textSize="16sp"
+        android:textColor="@color/blue"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/view_home"
+        app:layout_constraintHorizontal_bias="0.620"
+        app:layout_constraintStart_toStartOf="@+id/view_home"
+        app:layout_constraintTop_toTopOf="@+id/view_home"
+        app:layout_constraintVertical_bias="0.795" />
 
     <TextView
         android:id="@+id/textview_namauser"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="Halo Budi Setiawan"
+        android:textColor="@color/blue"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view_home"
         app:layout_constraintEnd_toEndOf="@+id/view_home"
-        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintHorizontal_bias="0.826"
         app:layout_constraintStart_toStartOf="@+id/view_home"
         app:layout_constraintTop_toTopOf="@+id/view_home"
-        app:layout_constraintVertical_bias="0.150" />
+        app:layout_constraintVertical_bias="0.163" />
+
+    <TextView
+        android:id="@+id/textview_username"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:text="Halo"
+        android:textColor="@color/blue"
+        android:textSize="16sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="@+id/view_home"
+        app:layout_constraintEnd_toEndOf="@+id/view_home"
+        app:layout_constraintHorizontal_bias="0.826"
+        app:layout_constraintStart_toStartOf="@+id/view_home"
+        app:layout_constraintTop_toTopOf="@+id/view_home"
+        app:layout_constraintVertical_bias="0.194" />
+
+    <ImageView
+        android:id="@+id/image_akun"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toBottomOf="@+id/view_home"
+        app:layout_constraintEnd_toEndOf="@+id/view_home"
+        app:layout_constraintHorizontal_bias="0.160"
+        app:layout_constraintStart_toStartOf="@+id/view_home"
+        app:layout_constraintTop_toTopOf="@+id/view_home"
+        app:layout_constraintVertical_bias="0.165"
+        app:srcCompat="@drawable/ic_baseline_account_circle_24" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
